name:           stakkeo
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/sigrlami/stakkeo#readme>
homepage:       https://github.com/sigrlami/stakkeo#readme
bug-reports:    https://github.com/sigrlami/stakkeo/issues
author:         Sergey Bushnyak
maintainer:     sergey.bushnyak@sigrlami.eu
copyright:      Copyright: (c) 2018 Sergey Bushnyak
license:        Apache
license-file:   LICENSE
build-type:     Simple
cabal-version:  >= 1.10
extra-source-files:
    ChangeLog.md
    README.md

source-repository head
  type: git
  location: https://github.com/sigrlami/stakkeo

executable stakkeo
  main-is: Main.hs
  hs-source-dirs:
      src
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
  default-language: Haskell2010
